# SFML-Game

./: .gitattributes  .gitmodules  README.md
SFMLTest/: .gitignore  CMakeLists.txt  ChangeNameMenu.cpp  ChangeNameMenu.h  Controller.cpp  Controller.h  Doxyfile  Game.cpp  Game.h  GameView.cpp  GameView.h  MainMenu.cpp  MainMenu.h  Todo.md  helloWord.txt  main.cpp  run.sh
SFMLTest/Google_tests/: CMakeLists.txt  test1.cpp  test2.cpp
SFMLTest/TextRessources/: help.txt
SFMLTest/Utils/GUI/: CMakeLists.txt
SFMLTest/Utils/GUI/Include/: Centering.h
SFMLTest/Utils/Logging/: CMakeLists.txt
SFMLTest/Utils/Logging/Include/: log.h  logger.h
SFMLTest/Utils/Network/: CMakeLists.txt  easywsclient.cpp
SFMLTest/Utils/Network/Include/: easywsclient.h
SFMLTest/html/: ChangeNameMenu_8h_source.html  GameView_8h_source.html  Game_8cpp.html  Game_8cpp__incl.map  Game_8cpp__incl.md5  Game_8h.html  Game_8h__dep__incl.map  Game_8h__dep__incl.md5  Game_8h__incl.md5  Game_8h_source.html  MainMenu_8cpp.html  MainMenu_8cpp__incl.dot  MainMenu_8cpp__incl.map  MainMenu_8cpp__incl.md5  MainMenu_8h.html  MainMenu_8h__dep__incl.dot  MainMenu_8h__dep__incl.map  MainMenu_8h__dep__incl.md5  MainMenu_8h__incl.dot  MainMenu_8h__incl.map  MainMenu_8h__incl.md5  MainMenu_8h_source.html  annotated.html  classChangeNameMenu-members.html  classChangeNameMenu.html  classGameView-members.html  classGameView.html  classMainMenu-members.html  classMainMenu.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  group__MainMenu.html  group__gameView.html  group__genPurpose.html  md_Todo.html  menudata.js  (+2 more)
SFMLTest/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_1.js  files_0.js  functions_0.js  functions_2.js  functions_3.js  groups_0.js  pages_0.js  searchdata.js
SFMLTest/images/GameView/: sources.txt
SFMLTest/images/LobbyOverview/: sources.txt
SFMLTest/images/MainMenu/: sources.txt
SFMLTest/latex/: Game_8cpp.tex  Game_8cpp__incl.md5  Game_8h.tex  Game_8h__dep__incl.md5  Game_8h__incl.md5  MainMenu_8cpp.tex  MainMenu_8cpp.tex.tmp  MainMenu_8cpp__incl.dot  MainMenu_8cpp__incl.md5  MainMenu_8h.tex  MainMenu_8h__dep__incl.dot  MainMenu_8h__dep__incl.md5  MainMenu_8h__incl.dot  MainMenu_8h__incl.md5  annotated.tex  classChangeNameMenu.tex  classGameView.tex  classMainMenu.tex  files.tex  group__MainMenu.aux  group__MainMenu.tex  group__gameView.aux  group__gameView.tex  group__genPurpose.tex  md_Todo.tex  modules.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
SFMLTest/src/: CMakeLists.txt  ChangeNameMenu.cpp  ChangeNameMenu.h  Controller.cpp  Controller.h  GUIView.h  Game.cpp  Game.h  GameMoveChecker.cpp  GameMoveChecker.h  GameView.cpp  GameView.h  Lobby.cpp  Lobby.h  LobbyOverview.cpp  LobbyOverview.h  MainMenu.cpp  MainMenu.h  Network.cpp  Network.h  Stone.cpp  Stone.h  Tile.cpp  Tile.h  main.cpp
SFMLTest/src/Messages/: CMakeLists.txt  CreateNewLobby.cpp  CreateNewLobby.h  GameMove.cpp  GameMove.h  GetAvailableLobbies.cpp  GetAvailableLobbies.h  IncomingMessageParser.cpp  IncomingMessageParser.h  JoinLobby.cpp  JoinLobby.h  LeaveGame.cpp  LeaveGame.h  LeaveLobby.cpp  LeaveLobby.h  StartGame.cpp  StartGame.h
SFMLTest/src/Messages/Headers/: GameMove.h  GetAvailableLobbies.h  IncomingMessageParser.h  JoinLobby.h  LeaveGame.h  LeaveLobby.h
SFMLTest/src/Messages/Source/: CreateNewLobby.cpp  GameMove.cpp  GetAvailableLobbies.cpp  IncomingMessageParser.cpp  JoinLobby.cpp  LeaveGame.cpp  LeaveLobby.cpp  StartGame.cpp
